--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 
 psiplot is an R package for generating plots of percent spliced-in (PSI) values of 
 alternatively-spliced exons. It is a supplement to the `plot` tool provided
-by [vast-tools](https://github.com/vastgroup/vast-tool), an RNA-Seq pipeline for 
+by [vast-tools](https://github.com/vastgroup/vast-tools), an RNA-Seq pipeline for 
 alternative splicing analysis. The `plot` functionality in vast-tools was designed
 to be run as an executable. The `plot` code base has been forked to create this R package. 
 
@@ -94,7 +94,7 @@ PSI plots can also be configured using the standard R options.
 ```
 
 ## Related Projects
-- [vast-tools](https://github.com/vastgroup/vast-tool)
+- [vast-tools](https://github.com/vastgroup/vast-tools)
 
 
 ## References
