--- a/README.Rmd
+++ b/README.Rmd
@@ -88,7 +88,8 @@ type of samples in your plots.
 
 #### The R way
 
-PSI plots can also be configured using the standard R options. 
+The colors and other graphical paramters can also be configured in R. `plot_events()` provides some limited options. See `?plot_events` for more details on the
+available options.
 
 ```{r eval=FALSE}
 ```
