--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,11 @@ alternatively-spliced exons that were computed by
 [VAST-TOOLS](https://github.com/vastgroup/vast-tools), an RNA-Seq pipeline for 
 alternative splicing analysis. The functions are derived from the `vast-tools plot` tool. 
 
-Currently, the plot code for VAST-TOOLS and psiplot are maintained separately, even though they are technically identical. Future work is planned to integrate psiplot into the vast-tools `plot` code.
+Currently, the plot code for VAST-TOOLS and psiplot are maintained separately, 
+even though they are technically identical. Future work is planned to integrate 
+psiplot into the vast-tools `plot` code.
+
+For a demo of psiplot, take a look at the companion Shiny app here: http://kcha.shinyapps.io/psiplotter-app.
 
 ## Installation
 
