--- a/README.Rmd
+++ b/README.Rmd
@@ -126,3 +126,8 @@ tracker](https://github.com/kcha/psiplot/issues).
 ## Related Projects
 - [VAST-TOOLS](https://github.com/vastgroup/vast-tools)
 - [psiplotter-app](https://github.com/kcha/psiplotter-app): A Shiny app for visualizing PSI plots
+
+## Acknowledgements
+- Manuel Irimia
+- Nuno Barbosa-Morais
+- Tim Sterne-Weiler
