--- a/README.Rmd
+++ b/README.Rmd
@@ -158,7 +158,7 @@ config
 - **SubgroupName (Optional)**: Subgroup name. Use for plotting the average PSI of
 samples belonging to the same subgroup INSTEAD of the individual samples (disable
 by setting `subg=FALSE`, or using config files without this column). See
-[Sample subgroups] for more details.
+[Subgrouping samples] for more details.
 - **GroupName**: Group name. Use for plotting the average PSI of samples belonging
 to the same group (enable by setting `groupmean=TRUE`).
 - **RColorCode**: An R color specification:
