--- a/vignettes/psiplot-usage.Rmd
+++ b/vignettes/psiplot-usage.Rmd
@@ -2,7 +2,10 @@
 title: "Introduction to psiplot"
 author: "Kevin Ha and Javier Tapial"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output: 
+  rmarkdown::html_vignette:
+    toc: true
+    toc_depth: 4
 vignette: >
   %\VignetteIndexEntry{Introduction to psiplot}
   %\VignetteEngine{knitr::rmarkdown}
@@ -138,8 +141,7 @@ plot_multi(psi, config = cfg)
 plot_expr(crpkm[1,], config = cfg)
 ```
 
-The color and ordering of samples can be customized by supplying a plot
-configuration file. This file is tab-delimited and must be
+This file is tab-delimited and must be
 manually created. For example:
 
 ```{r}
@@ -147,25 +149,45 @@ manually created. For example:
 config
 ```
 
-- **Order**: The ordering of the samples from left to right.
-- **SampleName**: Name of the sample. MUST match sample name in input table.
-- **SubgroupName** (Optional): Subgroup name. Use for plotting the average PSI of
+The header is required, but the order of the columns is flexible. There are three
+required columns and two optional:
+
+Required:
+
+1. **SampleName**: Name of the sample. MUST match sample name in input table.
+1. **GroupName**: Group name. Use for plotting the average PSI of samples belonging
+to the same group (enable by setting `groupmean=TRUE`).
+
+Optional:
+
+1. **Order**: A specific ordering of the samples from left to right of the plot. 
+1. **SubgroupName**: Subgroup name. Use for plotting the average PSI of
 samples belonging to the same subgroup INSTEAD of the individual samples (enable
 by setting `subg=TRUE`). See [Subgrouping samples] for more details.
-- **GroupName**: Group name. Use for plotting the average PSI of samples belonging
-to the same group (enable by setting `groupmean=TRUE`).
-- **RColorCode**: An R color specification:
+1. **RColorCode**: An R color specification:
     1. color name (as specified by `colors()`).
     2. hex color code (#rrggbb).
 
 Tips:
 
-- The samples under SampleName MUST MATCH the names in the input table.
+- The samples under **SampleName** MUST MATCH the names in the input table.
 Only the samples listed in the config file will be represented in the
 resulting plots. Other samples in the input table but not in the config
 file will be ignored. This may be useful for plotting only a subset of samples.
 - The column **Order** does not need to be in sorted order. Thus, you can change
 the ordering of your samples by simply changing the order number.
+- Colors specified in **RColorCode** can be overridden using the `col` option.
+- If **RColorCode** is not specified or if the entire column is set to `NA`, then a default ggplot2 color palette will be used for
+annotating sample groups. For example:
+
+```{r warning=FALSE}
+config2 <- config
+config2$RColorCode <- NA
+head(config2)
+plot_event(psi[1,], config2)
+```
+
+- When a group is assigned to multiple colors, only the first color will be used.
 - For `plot_multi`, specifying a config file will disable clustering of samples
 and instead use the config order.
 - If the config file does not include subgroups, samples will not be subgrouped,
@@ -175,7 +197,8 @@ but `subg` is set to `FALSE`, they will not be used.
 first one.
 - When a subgroup is mapped to multiple groups, it will only be included in the
 first one.
-- When a group is assigned to multiple colors, only the first color will be used.
+
+
 
 #### Using R
 
