--- a/vignettes/psiplot-usage.Rmd
+++ b/vignettes/psiplot-usage.Rmd
@@ -149,8 +149,8 @@ manually created. For example:
 config
 ```
 
-The header is required, but the order of the columns is flexible. There are three
-required columns and two optional:
+The header is required, but the order of the columns is flexible. There are two
+required columns and three optional:
 
 Required:
 
