Add some badges

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,8 @@ library(psiplot)
 ```
 
 [![Build Status](https://travis-ci.org/kcha/psiplot.svg?branch=master)](https://travis-ci.org/kcha/psiplot)
+[![GitHub release](https://img.shields.io/github/release/kcha/psiplot.svg)](https://github.com/kcha/psiplot)
+[![GitHub license](https://img.shields.io/github/license/kcha/psiplot.svg)](https://github.com/kcha/psiplot/blob/master/LICENSE)
 
 # psiplot
 
@@ -70,7 +72,8 @@ plot_multievent(psi[c(1,2),], config = config, event_col = c("black", "red"))
 ### Vignette
 
 See this [vignette](https://htmlpreview.github.io/?https://github.com/kcha/psiplot/blob/master/vignettes/psiplot-usage.html) for more detailed usage, including how to customize psiplots
-using a configuration file.
+using a configuration file. The vignette is also available in R using the
+command `vignette("psiplot-usage")`.
 
 ## Issues
 Please report all bugs and issues using the [issue
